# ole-asr

./: Dockerfile  LICENSE  Makefile  README.md  STRUCTURE.md  agents.md  config.py  main.py  pyproject.toml  requirements.txt  run_server.py  test_asr_service.py
.github/workflows/: docker-build.yml
ole_asr/: __init__.py  api.py  models.py  services.py  utils.py
ole_asr/providers/: __init__.py  base.py  qwen3_asr.py
